--- a/PortFolion/PortFolion/Views/ListTab.xaml
+++ b/PortFolion/PortFolion/Views/ListTab.xaml
@@ -7,7 +7,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PortFolion.Views"
+             xmlns:vm ="clr-namespace:PortFolion.ViewModels"
              xmlns:model="clr-namespace:PortFolion.Models"
+             xmlns:selector ="clr-namespace:PortFolion.Views.Selector"
              xmlns:converter="clr-namespace:PortFolion.Views.Converter"
              xmlns:tree="clr-namespace:System.Windows.Controls;assembly=TreeListView"
              xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
@@ -53,7 +55,7 @@
                     </TreeView.ItemContainerStyle>
                     <TreeView.ItemTemplate>
                         <HierarchicalDataTemplate DataType="model:DateTree" ItemsSource="{Binding Children}">
-                            <TextBlock Text="{Binding Display,UpdateSourceTrigger=PropertyChanged}"/>
+                            <TextBlock Text="{Binding Display,UpdateSourceTrigger=PropertyChanged}" />
                         </HierarchicalDataTemplate>
                     </TreeView.ItemTemplate>
                 </TreeView>
@@ -148,60 +150,64 @@
                             </Setter.Value>
                         </Setter>
                     </Style>
-                    <Style TargetType="DataGridCell">
-                        <Setter Property="Background" Value="Purple"/>
-                    </Style>
+                    <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Gray"/>
+                    <!--<Style TargetType="TreeView" BasedOn="{StaticResource tree:TreeListView}"></Style>-->
+                    <!--Select elements-->
+                    <selector:NodeTemplateSelector x:Key="NodeTemplateSelector"/>
+                    <DataTemplate x:Key="NodeTemplate" DataType="{x:Type vm:CommonNodeVM}">
+                        <StackPanel Orientation="Horizontal" >
+                            <tree:TreeListViewExpander x:Name="TreeExpander" Margin="3,0"/>
+                            <TextBlock Text="{Binding Code}" VerticalAlignment="Center" Margin="0,0"/>
+                            <TextBlock Text="{Binding Name}" VerticalAlignment="Center" Margin="3,0"/>
+                            <ddmb:DropDownMenuButton Style="{DynamicResource MetroToggleButton}" Margin="3,0">
+                                <!--<StackPanel Orientation="Horizontal ">-->
+                                <TextBlock Text="編"/>
+                                <!--<Path Width="8" Height="6" Margin="0,0,0,0" Stretch="Fill" Fill="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ddmb:DropDownMenuButton}},Path=Foreground}" Data="F1 M 57.5692,88L 99.1384,16L 16,16L 57.5692,88 Z "/>-->
+                                <!--</StackPanel>-->
+                                <ddmb:DropDownMenuButton.DropDownContextMenu>
+                                    <ContextMenu ItemsSource="{Binding MenuList}">
+                                        <ContextMenu.ItemContainerStyle>
+                                            <Style TargetType="MenuItem">
+                                                <Setter Property="Header" Value="{Binding Header}"/>
+                                                <Setter Property="Command" Value="{Binding MenuCommand}"/>
+                                            </Style>
+                                        </ContextMenu.ItemContainerStyle>
+                                    </ContextMenu>
+                                </ddmb:DropDownMenuButton.DropDownContextMenu>
+                            </ddmb:DropDownMenuButton>
+                            <StackPanel.ContextMenu>
+                                <ContextMenu ItemsSource="{Binding MenuList}">
+                                    <ContextMenu.ItemContainerStyle>
+                                        <Style TargetType="MenuItem">
+                                            <Setter Property="Header" Value="{Binding Header}"/>
+                                            <Setter Property="Command" Value="{Binding MenuCommand}"/>
+                                        </Style>
+                                    </ContextMenu.ItemContainerStyle>
+                                </ContextMenu>
+                            </StackPanel.ContextMenu>
+                        </StackPanel>
+                    </DataTemplate>
+                    <DataTemplate x:Key="LeafTemplate" DataType="{x:Type vm:CommonNodeVM}">
+                        <StackPanel Orientation="Horizontal">
+                            <tree:TreeListViewExpander x:Name="TreeExpander" Margin="3,0"/>
+                            <TextBlock Text="{Binding Code}" VerticalAlignment="Center" Margin="0,0"/>
+                            <TextBlock Text="{Binding Name}" VerticalAlignment="Center" Margin="3,0"/>
+                        </StackPanel>
+                    </DataTemplate>
                 </tree:TreeListView.Resources>
                 <tree:TreeListView.ItemTemplate>
                     <HierarchicalDataTemplate ItemsSource="{Binding Children}"/>
                 </tree:TreeListView.ItemTemplate>
-                <!--<tree:TreeListView.ItemContainerStyle>
-                    <Style TargetType="{x:Type TreeViewItem}">
-                    </Style>
-                </tree:TreeListView.ItemContainerStyle>-->
                 <tree:TreeListView.Columns>
-                    <GridViewColumn Header="項目" Width="160">
-                        <GridViewColumn.CellTemplate>
+                    <GridViewColumn Header="項目" Width="160" CellTemplateSelector="{StaticResource NodeTemplateSelector}">
+                        <!--<GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <StackPanel Orientation="Horizontal">
-                                    <tree:TreeListViewExpander Margin="3,0"/>
-                                    <TextBlock Text="{Binding Code}" VerticalAlignment="Center" Margin="0,0"/>
-                                    <TextBlock Text="{Binding Name}" VerticalAlignment="Center" Margin="3,0"/>
-                                    <ddmb:DropDownMenuButton Style="{DynamicResource MetroToggleButton}" Margin="3,0">
-                                        <!--<StackPanel Orientation="Horizontal ">-->
-                                        <TextBlock Text="編"/>
-                                        <!--<Path Width="8" Height="6" Margin="0,0,0,0" Stretch="Fill" Fill="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ddmb:DropDownMenuButton}},Path=Foreground}" Data="F1 M 57.5692,88L 99.1384,16L 16,16L 57.5692,88 Z "/>-->
-                                        <!--</StackPanel>-->
-                                        <ddmb:DropDownMenuButton.DropDownContextMenu>
-                                            <ContextMenu ItemsSource="{Binding MenuList}">
-                                                <ContextMenu.ItemContainerStyle>
-                                                    <Style TargetType="MenuItem">
-                                                        <Setter Property="Header" Value="{Binding Header}"/>
-                                                        <Setter Property="Command" Value="{Binding MenuCommand}"/>
-                                                    </Style>
-                                                </ContextMenu.ItemContainerStyle>
-                                            </ContextMenu>
-                                        </ddmb:DropDownMenuButton.DropDownContextMenu>
-                                    </ddmb:DropDownMenuButton>
-                                    <StackPanel.ContextMenu>
-                                        <ContextMenu ItemsSource="{Binding MenuList}">
-                                            <ContextMenu.ItemContainerStyle>
-                                                <Style TargetType="MenuItem">
-                                                        <Setter Property="Header" Value="{Binding Header}"/>
-                                                        <Setter Property="Command" Value="{Binding MenuCommand}"/>
-                                                </Style>
-                                            </ContextMenu.ItemContainerStyle>
-                                        </ContextMenu>
-                                    </StackPanel.ContextMenu>
-                                </StackPanel>
                             </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                        
+                        </GridViewColumn.CellTemplate>-->
                     </GridViewColumn>
-                    <GridViewColumn Header="評価額(比率)" Width="110">
+                    <GridViewColumn Header="評価額(比率)" Width="120">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <!--<TextBlock Text="{Binding Amount}"/>-->
                                 <TextBlock>
                                     <TextBlock.Text>
                                         <MultiBinding StringFormat="{}{0:N0} ({1}%)">
@@ -230,7 +236,7 @@
                     <GridViewColumn Header="平均取得単価" Width="auto">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding PerBuyPriceAverage,StringFormat={}{0:N1}}"/>
+                                <TextBlock Text="{Binding PerBuyPriceAverage,StringFormat={}{0:N0}}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
