--- a/PortFolion/PortFolion/Views/AccountEditWindow.xaml
+++ b/PortFolion/PortFolion/Views/AccountEditWindow.xaml
@@ -68,7 +68,7 @@
                         AnimateOpacity="True">
                 <StackPanel Orientation="Vertical">
                     <TextBlock Text="{Binding NodeNameEditer.PresentName}" HorizontalAlignment="Center"/>
-                    <TextBox  Text="{Binding NodeNameEditer.Name}" HorizontalAlignment="Center"/>
+                    <TextBox  Text="{Binding NodeNameEditer.Name,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center"/>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                         <Button Content="Cancel" Command="{Binding NodeNameEditer.CancelCmd}" HorizontalAlignment="Right"/>
                         <Button Content="OK" Command="{Binding NodeNameEditer.ExecuteCmd}" HorizontalAlignment="Right"/>
